<resources>
    <string name="app_name">UnleashYourTalent</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_click">Click Me!</string>
    <string name="empty_textview">Currently i am empty</string>
    <string name="button_handle_files">Open Text Files Activity</string>
    <string name="read_button">Read</string>
    <string name="write_button">Write</string>
    <string name="xml_files">Open XML Files Activity</string>
    <string name="binary_files">Open Binary Files Activity</string>
    <string name="audio_recording_activity">Open Recording Activity</string>
    <string name="start_record_audio">Start Recording</string>
    <string name="stop_record_audio">Stop Recording</string>
    <string name="play_audio">Play</string>
    <string name="pause_audio">Pause</string>
</resources>
